Employee re-add and modified

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -31,8 +31,8 @@
     </div>
 </div>
 <!--details-->
-<div data-th-fragment="employeeDetailsFragment" class="container-fluid formBorder">
-    <div class="col-sm-12 flex-column text-dark">
+<div class="container-fluid formBorder">
+    <div class="col-sm-12 flex-column text-dark" data-th-fragment="employeeDetailsFragment">
         <div class="row">
             <!--Left Side-->
             <div class="form-group col-md-6 col-sm-6 flex-column">
@@ -154,14 +154,6 @@
                         <p id="land" data-th-text="${employeeDetail.land}" class="display_detail"></p>
                     </div>
                 </div>
-                <!--<div class="form-row text-right">
-                    <div class="col-md-4">
-                        <label class="control-label" for="email">Email :</label>
-                    </div>
-                    <div class="col-md-8">
-                        <p id="email" data-th-text="${employeeDetail.email}" class="display_detail"></p>
-                    </div>
-                </div>-->
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="officeEmail">Office Email :</label>
@@ -211,30 +203,29 @@
                     </div>
                 </div>
             </div>
-
-            <!--images-->
-            <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
-                <div class="col" id="photoDetails">
-                    <div>
-                        <label class="control-label ">Photo Details : </label>
-                    </div>
-                    <div class="row">
-                        <div class="col" id="filesList" data-th-each="file, rowStat: ${files}">
-                            <div class="col">
-                                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                                    <div class="card text-center">
-                                        <div class="card-body">
-                                            <img id="img" class="rounded"
-                                                 style="height: 150px; widdata-th- 150px; border-radius: 10px"
-                                                 alt="Employee images" data-th-src="${file.url}"/>
-                                        </div>
-                                        <div class="card-footer bg-secondary text-light text-center">
-                                            <p id="imgName" data-th-text="${file.filename}"></p>
-                                            <span> Uploaded Date :
+        </div>
+    </div>
+    <!--images-->
+    <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
+        <div class="col" id="photoDetails">
+            <div>
+                <label class="control-label ">Photo Details : </label>
+            </div>
+            <div class="row">
+                <div class="col" id="filesList" data-th-each="file, rowStat: ${files}">
+                    <div class="col">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <img id="img" class="rounded"
+                                         style="height: 150px; widdata-th- 150px; border-radius: 10px"
+                                         alt="Employee images" data-th-src="${file.url}"/>
+                                </div>
+                                <div class="card-footer bg-secondary text-light text-center">
+                                    <p id="imgName" data-th-text="${file.filename}"></p>
+                                    <span> Uploaded Date :
                                             <p id="imgCreateAt" data-th-text="${{file.createAt}}"></p>
                                             </span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -242,7 +233,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
         <a href="/employee">
@@ -254,10 +244,9 @@
     <br/>
 </div>
 
-<!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div  data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
