--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -7,7 +7,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 
-<div class="container  form-Border" >
+<div class="container " >
   <div class="row text-center formManagement border-info" >
     <div class="col" >
       <a class="btn btn-outline-info" href="/home" >
@@ -32,7 +32,7 @@
   </div >
 </div >
 <!--Form Content - start -->
-<div class="container-fluid bg-light formBorder" >
+<div class="container-fluid " >
   <div class="col-sm-12 flex-column " >
     <form id="form" class="form-horizontal" data-th-action="${addStatus==true?'/employee/save':'/employee/update'}"
           data-th-object="${employee}" method="POST" enctype="multipart/form-data" >
@@ -46,7 +46,7 @@
             </div >
             <div class="col-md-8" >
               <input id="id" data-th-field="*{id}" class="form-control" type="text" readonly />
-              <input type="text" data-th-field="*{liveOrDead}" hidden>
+              <input type="text" data-th-field="*{liveDead}" hidden>
             </div >
           </div >
           <!--Payrole number-->
@@ -77,18 +77,7 @@
               </select >
             </div >
           </div >
-          <!--wopNumber-->
-          <div class="form-row text-right" >
-            <div class="col-md-4" >
-              <label class="control-label" for="name" >WOP Number :</label >
-            </div >
-            <div class="col-md-8" >
-              <input id="wopNumber" data-th-field="*{wopNumber}" class="form-control" tabindex="4" type="text" required />
-              <span data-th-errors="*{name}"
-                    data-th-if="${#fields.hasErrors('wopNumber')}" class="error" >Error WOP Number</span >
-            </div >
-          </div >
-          <!--WOP Number-->
+          <!--Name-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
               <label class="control-label" for="name" >Name :</label >
@@ -157,21 +146,6 @@
                     data-th-if="${#fields.hasErrors('dateOfBirth')}" class="error" >Error Birthday</span >
             </div >
           </div >
-          <!--Blood group-->
-          <div class="form-row text-right">
-              <div class="col-md-4">
-                  <label class="control-label" for="bloodGroup">Blood Group :</label>
-              </div>
-              <div class="col-md-8">
-                  <select id="bloodGroup" data-th-field="*{bloodGroup}" class="form-control" tabindex="9" required>
-                      <option value="">Please select</option>
-                      <option data-th-each="bloodGroups : ${bloodGroup}"
-                              data-th-text="${bloodGroups.bloodGroup}"
-                              data-th-value="${bloodGroups}"
-                              data-th-selected="${bloodGroups==employee.bloodGroup?'selected':'unselected'}">Please select</option>
-                  </select>
-              </div>
-          </div>
           <!--Designation-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
@@ -261,17 +235,6 @@
                     data-th-if="${#fields.hasErrors('land')}" id="landError" >Error Land Number</span >
             </div >
           </div >
-          <!--Email-->
-          <div class="form-row text-right">
-              <div class="col-md-4">
-                  <label class="control-label" for="email">Email :</label>
-              </div>
-              <div class="col-md-8">
-                  <input id="email" data-th-field="*{email}" class="form-control" tabindex="16" type="email" required/>
-                  <span class="error" data-th-errors="*{email}"
-                        data-th-if="${#fields.hasErrors('email')}" id="emailError">Error Email</span>
-              </div>
-          </div>
           <!--Office email-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
