--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -41,7 +41,7 @@
                     <th> Index</th>
                     <th> Image</th>
                     <th> Employee Id</th>
-                    <th> Name</th>
+                    <th> Calling Name</th>
                     <th> Mobile</th>
                     <th> Designation</th>
                     <th> Status</th>
@@ -96,8 +96,7 @@
         </script>
     </div>
 </div>
-<!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<div  th:replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
 <script th:replace="~{fragments/script :: scriptFragment}"></script>
 
