--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,9 +16,9 @@
     <link th:href="@{/webjars/jquery-ui/1.12.1/jquery-ui.theme.css}" media="all" rel="stylesheet" type="text/css"/>
 
     <!--Pdf js -->
-    <link th:href="@{/webjars/pdf-js/2.3.200/web/viewer.css}" media="all" rel="stylesheet" type="text/css">
+    <!--<link th:href="@{/webjars/pdf-js/2.3.200/web/viewer.css}" media="all" rel="stylesheet" type="text/css">-->
 
-    <!--Chart js-->
+    <!--&lt;!&ndash;Chart js&ndash;&gt;-->
     <link th:href="@{/webjars/chart.js/2.9.3/dist/Chart.min.css}" media="all" rel="stylesheet" type="text/css">
 
     <!--table pagination-->
