--- a/src/main/resources/templates/qualification/addQualification.html
+++ b/src/main/resources/templates/qualification/addQualification.html
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <h4 th:text="${addStatus==false?'New Qualification':'Update Qualification'}" ></h4 >
+          <h4 th:text="${addStatus==true?'New Qualification':'Update Qualification'}" ></h4 >
         </strong >
       </h4 >
     </div >
@@ -51,7 +51,7 @@
     </div >
   </div >
   <div class="col-sm-12 flex-column " >
-    <form th:action="${addStatus==false?'/qualification/save' :'/qualification/update'}" method="post"
+    <form th:action="${addStatus==true?'/qualification/save' :'/qualification/update'}" method="post"
           th:object="${qualification}"
           class="mt-3" >
 
@@ -65,8 +65,8 @@
           <input id="id" data-th-field="*{id}" class="form-control" type="text" readonly />
         </div >
       </div >
-      <!--Payrole number-->
-      <div class="form-row text-right" data-th-if="${addStatus==false}">
+      <!--Name-->
+      <div class="form-row text-right">
         <div class="col-md-4" >
           <label class="control-label" for="name" >Name :</label >
         </div >
