--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head th:replace="~{fragments/header :: headerFragment}" >
+<html lang="en"  >
+<head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
 </head >
 <body >
-<nav th:replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <div class="container " >
   <div class="row text-center formManagement border-info" >
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <h4 th:text="${addStatus==true?'New Employee Leave':'Update Employee Leave'}" ></h4 >
+          <span data-th-text="${addStatus==true?'New Employee Leave':'Update Employee Leave'}" ></span >
         </strong >
       </h4 >
     </div >
@@ -45,14 +45,14 @@
       </div >
       <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
         <div class="card-body" >
-          <div th:replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
+          <div data-th-replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
         </div >
       </div >
     </div >
   </div >
   <div class="col-sm-12 flex-column " >
-    <form th:action="${addStatus==true?'/employeeLeave/save' :'/employeeLeave/update'}" method="post"
-          th:object="${employeeLeave}"
+    <form data-th-action="${addStatus==true?'/employeeLeave/save' :'/employeeLeave/update'}" method="post"
+          data-th-object="${employeeLeave}"
           class="mt-3" >
 
       <input data-th-name="${'employee.id'}" data-th-value="${employeeDetail.id}" class="form-control" type="hidden"
@@ -175,9 +175,9 @@
 
 </div >
 <!--footer include-->
-<div th:replace="~{fragments/footer :: footerFragment}" ></div >
+<div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
-<div th:replace="~{fragments/script :: scriptFragment}" ></div >
+<div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
 <script >
     function dateMatch() {
         let startDateTime = $(`#startAt`).val();
