--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <footer th:fragment="footerFragment" class="page-footer">
     <div class="footer-copyright">
         <div class="container-fluid text-center text-info">
