--- a/src/main/resources/templates/qualification/addQualification.html
+++ b/src/main/resources/templates/qualification/addQualification.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head th:replace="~{fragments/header :: headerFragment}" >
+<html lang="en"  >
+<head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
 </head >
 <body >
-<nav th:replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <div class="container " >
   <div class="row text-center formManagement border-info" >
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <h4 th:text="${addStatus==true?'New Qualification':'Update Qualification'}" ></h4 >
+          <h4 data-th-text="${addStatus==true?'New Qualification':'Update Qualification'}" ></h4 >
         </strong >
       </h4 >
     </div >
@@ -45,14 +45,14 @@
       </div >
       <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
         <div class="card-body" >
-          <div th:replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
+          <div data-th-replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
         </div >
       </div >
     </div >
   </div >
   <div class="col-sm-12 flex-column " >
-    <form th:action="${addStatus==true?'/qualification/save' :'/qualification/update'}" method="post"
-          th:object="${qualification}"
+    <form data-th-action="${addStatus==true?'/qualification/save' :'/qualification/update'}" method="post"
+          data-th-object="${qualification}"
           class="mt-3" >
 
       <input  data-th-name="${'employee.id'}" data-th-value="${employeeDetail.id}" class="form-control" type="hidden" readonly />
@@ -101,8 +101,8 @@
 
 </div >
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}" ></footer >
+<footer data-th-replace="~{fragments/footer :: footerFragment}" ></footer >
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}" ></script >
+<script data-th-replace="~{fragments/script :: scriptFragment}" ></script >
 </body >
 </html >
