--- a/src/main/resources/templates/qualification/qualification-detail.html
+++ b/src/main/resources/templates/qualification/qualification-detail.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head th:replace="~{fragments/header :: headerFragment}" >
+<html lang="en"  >
+<head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
 </head >
 <body >
-<nav th:replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 <div class="container-fluid" >
   <div class="row" >
     <div class="col-md-12" >
@@ -22,7 +22,7 @@
                     <th >
                       <label class="form-label " > Id </label ></th >
                     <td >
-                      <p class="display_detail" th:text="${qualificationDetail.id}" ></p >
+                      <p class="display_detail" data-th-text="${qualificationDetail.id}" ></p >
                     </td >
                   </tr >
 
@@ -30,7 +30,7 @@
                     <th >
                       <label class="form-label " > Name </label ></th >
 
-                    <td ><p class="display_detail" th:text="${qualificationDetail.name}" ></p >
+                    <td ><p class="display_detail" data-th-text="${qualificationDetail.name}" ></p >
                     </td >
                   </tr >
                   </tbody >
@@ -45,7 +45,7 @@
     </div >
     <div class="container-fluid formBorder text-center" >
       <div class="col" >
-        <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}" >
+        <div class="col" id="employeeListPresent" data-th-if="${not #lists.isEmpty(employees)}" >
           <table class="table table-hover table-striped" id="myTable" >
             <thead >
             <tr >
@@ -60,8 +60,8 @@
             </tr >
             </thead >
             <tbody >
-            <tr th:each="employee, rowCount : ${employees}" >
-              <th th:text="${rowCount.count}" ></th >
+            <tr data-th-each="employee, rowCount : ${employees}" >
+              <th data-th-text="${rowCount.count}" ></th >
               <th >
                 <div class="image" data-th-if="${employee.fileInfo !=null}" >
                   <img id="img" class="rounded"
@@ -70,17 +70,17 @@
                        data-th-src="${employee.fileInfo.url}" />
                 </div >
               </th >
-              <th th:text="${employee.code}" ></th >
-              <th th:text="${employee.callingName}" ></th >
-              <th th:text="${employee.mobileOne}" ></th >
-              <th th:text="${employee.designation.designation}" ></th >
-              <th th:text="${employee.employeeStatus.employeeStatus}" ></th >
+              <th data-th-text="${employee.code}" ></th >
+              <th data-th-text="${employee.callingName}" ></th >
+              <th data-th-text="${employee.mobileOne}" ></th >
+              <th data-th-text="${employee.designation.designation}" ></th >
+              <th data-th-text="${employee.employeeStatus.employeeStatus}" ></th >
               <th >
-                <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;View</a >
-                <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm" ><i
+                <a id="employeeView" data-th-href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;View</a >
+                <a id="employeeEdit" data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm" ><i
                       class="fa fa-edit" ></i >&nbsp;Edit</a >
-                <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
-                   th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
+                <a id="employeeRemove" data-th-href="${'/employee/remove/' + employee.id}"
+                   data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
                       class="fa fa-trash" ></i >
                   Delete</a >
               </th >
@@ -89,7 +89,7 @@
           </table >
         </div >
       </div >
-      <div class="row" th:if="${ #lists.isEmpty(employees)}" >
+      <div class="row" data-th-if="${ #lists.isEmpty(employees)}" >
         <div class="col-sm-12" >
           <div class="alert alert-warning alert-dismissible fade show" role="alert" >
             <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
@@ -112,9 +112,9 @@
   </div >
 </div >
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}" ></footer >
+<footer data-th-replace="~{fragments/footer :: footerFragment}" ></footer >
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}" ></script >
+<script data-th-replace="~{fragments/script :: scriptFragment}" ></script >
 
 </body >
 </html >
