--- a/src/main/resources/templates/qualification/qualification.html
+++ b/src/main/resources/templates/qualification/qualification.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head th:replace="~{fragments/header :: headerFragment}" >
+<html lang="en"  >
+<head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
 </head >
 <body >
-<nav th:replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 <!--heading Area-->
 <div class="container-fluid  form-Border" >
   <div class="row text-center formManagement border-info" >
@@ -33,7 +33,7 @@
 </div >
 <div class="container-fluid formBorder text-center" >
 
-  <table class="table table-hover table-striped" id="myTable" th:if="${not #lists.isEmpty(qualifications)}" >
+  <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(qualifications)}" >
     <thead class="thead-inverse" >
     <tr >
       <th >Index</th >
@@ -43,17 +43,17 @@
     </tr >
     </thead >
     <tbody >
-    <tr th:each="qualification, rowCount : ${qualifications}" scope="row" >
-      <th th:text="${rowCount.count}" ></th >
-      <th th:text="${qualification.employee.name}" ></th >
-      <th th:text="${qualification.name}" ></th >
+    <tr data-th-each="qualification, rowCount : ${qualifications}" scope="row" >
+      <th data-th-text="${rowCount.count}" ></th >
+      <th data-th-text="${qualification.employee.name}" ></th >
+      <th data-th-text="${qualification.name}" ></th >
       <th >
         <a class="btn btn-primary btn-sm" id="qualificationEdit"
-           th:href="${'/qualification/edit/' + qualification.id}" ><i
+           data-th-href="${'/qualification/edit/' + qualification.id}" ><i
               class="fa fa-edit" ></i >&nbsp;Edit</a >
-        <a class="btn btn-danger btn-sm"            th:href="${'/qualification/remove/' + qualification.id}"
-           th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-           th:onclick="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"        ><i              aria-hidden="true" class="fa fa-trash" ></i >
+        <a class="btn btn-danger btn-sm"            data-th-href="${'/qualification/remove/' + qualification.id}"
+           data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
+           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"        ><i              aria-hidden="true" class="fa fa-trash" ></i >
           Delete</a >
 
       </th >
@@ -62,7 +62,7 @@
   </table >
 
   <!--if empty list-->
-  <div class="row" id="qualificationNotList" th:if="${ #lists.isEmpty(qualifications)}" >
+  <div class="row" id="qualificationNotList" data-th-if="${ #lists.isEmpty(qualifications)}" >
     <div class="alert alert-warning alert-dismissible fade show" role="alert" >
       <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
         <span aria-hidden="true" >&times;</span >
@@ -75,23 +75,23 @@
     </div >
   </div >
   <!--Show saved qualification-->
-  <div class="row" th:if="${qualificationDetail!=null}" >
+  <div class="row" data-th-if="${qualificationDetail!=null}" >
     <div class="col-sm-12" >
       <div class="alert alert-success alert-dismissible fade show" role="alert" >
         <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
           <span aria-hidden="true" >&times;</span >
         </button >
         <div class="container" >
-          <div th:replace="~{qualification/qualification-detail :: qualificationDetail}" ></div >
+          <div data-th-replace="~{qualification/qualification-detail :: qualificationDetail}" ></div >
         </div >
       </div >
     </div >
   </div >
 </div >
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}" ></footer >
+<footer data-th-replace="~{fragments/footer :: footerFragment}" ></footer >
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}" ></script >
+<script data-th-replace="~{fragments/script :: scriptFragment}" ></script >
 <script >
     /*active boostrap alert - start*/
     $(".alert").alert();
