Qualification detail was completed

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" >
-<head th:fragment="headerFragment">
+<head data-th-fragment="headerFragment">
     <title data-th-if="${headerTitle==null}" data-th-text="${'Deprtment Of Prisons'}">Spring boot - Thymeleaf</title>
     <title data-th-if="${headerTitle!=null}" data-th-text="${headerTitle}">Spring boot - Thymeleaf</title>
     <!-- Required meta tags -->
