--- a/src/main/resources/templates/fragments/unicodeTamil.html
+++ b/src/main/resources/templates/fragments/unicodeTamil.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid" onload="javascript:txtBox.box1.focus();" th:fragment="unicodeTamilFragment">
+<div class="container-fluid" onload="javascript:txtBox.box1.focus();" data-th-fragment="unicodeTamilFragment">
     <!-- modal tamil button -->
     <!--
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl"><i
