--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
-<footer th:fragment="footerFragment" class="page-footer">
+<footer data-th-fragment="footerFragment" class="page-footer">
     <div class="footer-copyright">
         <div class="container-fluid text-center text-info">
             <p>
