--- a/src/main/resources/templates/fragments/unicodeSinhala.html
+++ b/src/main/resources/templates/fragments/unicodeSinhala.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
-<div class="container-fluid" onload="javascript:txtBox.box.focus();" th:fragment="unicodeSinhalaFragment">
+<div class="container-fluid" onload="javascript:txtBox.box.focus();" data-th-fragment="unicodeSinhalaFragment">
 <!--
     &lt;!&ndash;Sinhala modal button &ndash;&gt;
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl"><i
