--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <!--details-->
-<div class="container-fluid formBorder">
+<div class="container-fluid ">
     <div class="col-sm-12 flex-column text-dark" data-th-fragment="employeeDetailsFragment">
         <div class="row">
             <!--Left Side-->
