--- a/src/main/resources/templates/employeeLeave/employeeLeave-detail.html
+++ b/src/main/resources/templates/employeeLeave/employeeLeave-detail.html
@@ -30,9 +30,9 @@
 
                   <tr >
                     <th >
-                      <label class="form-label " > Name </label ></th >
+                      <label class="form-label " > Remark </label ></th >
 
-                    <td ><p class="display_detail" data-th-text="${qualificationDetail.name}" ></p >
+                    <td ><p class="display_detail" data-th-text="${qualificationDetail.remark}" ></p >
                     </td >
                   </tr >
                   </tbody >
