--- a/src/main/resources/templates/fragments/unicodeSinhala.html
+++ b/src/main/resources/templates/fragments/unicodeSinhala.html
@@ -31,7 +31,7 @@
                 <div class="modal-body">
                     <!--Translator content-->
                     <div class="container-fluid form-row">
-                        <div class="col-6 bg-dark formBorder form-group">
+                        <div class="col-6 bg-dark  form-group">
                             <form name="txtBox" id="txtBox" class="form">
                                 <div class="form-group">
                                     <div class="form-row">
@@ -69,7 +69,7 @@
                             </form>
                         </div>
                         <!--Sinhala unicode table - schema -->
-                        <div id="scheme" class="bg-dark formBorder form-group col-6">
+                        <div id="scheme" class="bg-dark  form-group col-6">
                             <table>
                                 <tr>
                                     <td rowspan="5" style="width:10px;"></td>
@@ -1701,9 +1701,9 @@
 </div>
 
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
