--- a/src/main/resources/templates/fragments/unicodeTamil.html
+++ b/src/main/resources/templates/fragments/unicodeTamil.html
@@ -32,7 +32,7 @@
                 <div class="modal-body">
                     <!--Translator content-->
                     <div class="container-fluid form-row">
-                        <div class="bg-dark formBorder form-group">
+                        <div class="bg-dark  form-group">
                             <form name="txtBoxTamilish" class="form ">
                                 <div class="form-row text-center">
                                     <label class="TableText " for="tamilishWrite">
@@ -863,8 +863,8 @@
 </div>
 
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 </body>
 </html>
