--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -37,9 +37,9 @@
     </div>
 </div>
 &lt;!&ndash;footer include&ndash;&gt;
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 &lt;!&ndash;script include&ndash;&gt;
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>-->
 
 
 <body>
@@ -86,9 +86,9 @@
     </div>
 </div>
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 <script type="text/javascript" src="js/main.js"></script>
 
 
