--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-dark formBorder">
+<div class="container-fluid bg-dark ">
     <div class="col-md-12 flex-column ">
         <!--Container spaces-->
         <div class="row text-center">
@@ -86,9 +86,9 @@
     <strong> <span id="messageNote" data-th-text="${message}"></span></strong>
 </div>
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
