--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -23,7 +23,7 @@
         <div class="col"></div>
     </div>
 </div>
-<div class="container-fluid bg-dark formBorder">
+<div class="container-fluid bg-dark ">
     <div class="col-sm-12 flex-column ">
         <div class="row" id="userListTable" data-th-if="${not #lists.isEmpty(users)}">
             <div class="col-sm-12">
@@ -81,9 +81,9 @@
 </div>
 
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
