--- a/src/main/resources/templates/commendation/commendation-detail.html
+++ b/src/main/resources/templates/commendation/commendation-detail.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--heading Area-->
-<div class="container-fluid bg-dark form-Border">
+<div class="container-fluid  ">
     <div class="row text-center formManagement border-info">
         <!--View List Button-->
         <div class="col">
@@ -33,8 +33,9 @@
     </div>
 </div>
 <!--details-->
-<div class="container-fluid bg-info formBorder" data-th-fragment="offenceDetailsFragment">
-    <div class="col-sm-12 flex-column ">
+<div class="container-fluid bg-info " >
+    <div data-th-replace="~{employee/employeeDetail :: employeeDetailsFragment}" ></div >
+    <div class="col-sm-12 flex-column " data-th-fragment="commendationDetailsFragment">
         <div class="row">
             <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
                 <!--id-->
@@ -82,9 +83,9 @@
 </div>
 
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
