--- a/src/main/resources/templates/employeeLeave/employeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/employeeLeave.html
@@ -31,7 +31,7 @@
     </div >
   </div >
 </div >
-<div class="container-fluid formBorder text-center" >
+<div class="container-fluid  text-center" >
 
   <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(qualifications)}" >
     <thead class="thead-inverse" >
