--- a/src/main/resources/templates/role/addRole.html
+++ b/src/main/resources/templates/role/addRole.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark formBorder">
+<div class="container-fluid bg-dark ">
     <div class="col-sm-12 flex-column ">
         <form id="form" class="form-horizontal" method="POST" data-th-action="${addStatus==true?'/role/add':'/role/update'}"
               data-th-object="${role}">
@@ -70,9 +70,9 @@
     </div>
 </div>
 <!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+ <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
